--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "setup": "npm install && npm run setup --prefix backend/",
     "cdk-create-stack": "npm run cdk-create-stack --prefix backend/",
     "cdk-destroy": "npm run cdk-destroy --prefix backend/",
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
+    "dev": "next dev",
     "build": "NODE_OPTIONS=--openssl-legacy-provider next build && next export",
     "build:analyze": "NODE_OPTIONS=--openssl-legacy-provider ANALYZE=true next build",
     "start": "next start",
